--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,35 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <style>
+    html,body{
+      background-color: #E8E5D3;
+      font-family: 'PT Sans', Helvetica, Arial, 'Liberation Sans', FreeSans, sans-serif;;
+    }
+    body {
+      margin:0; padding:0px;
+      text-align:center;
+      }
+    #content {
+      width:900px;
+      margin:0px auto;
+      text-align:left;
+      }
+    td {text-align: right;}
+    select{width: 150px;}
+    header{
+      background-color: #00734A;
+      padding: 5px;
+      width: 890px;
+      color: white;
+      margin-bottom: 10px;
+    }
+    #logo {padding: 20px;}
+  </style>
 </head>
 <body>
-
+<div id="content">
 <%= yield %>
-
+</div>
 </body>
 </html>
