Add login/logout and default route.

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Concern Worldwide</h1>
+<h1>Concern Worldwide data</h1>
 <p>
   <%= @count %> questionnaires in the database.<br />
   <%= link_to 'List questionnaires', :action => 'list' %><br />
