--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,20 @@
 <body>
 <div id="content">
 <%= yield %>
+<% unless session[:key].blank? %>
+<div style="padding: 10px 0 0 0; font-size: 9pt; text-align: center">
+  <p>
+    <%= link_to "Admin", :controller => 'admin', :action => 'index' %> |
+    <%= link_to "List data", :controller => 'admin', :action => 'list' %> |
+    <%= link_to "Import data", :controller => 'admin', :action => 'import' %> |
+    <%= link_to "Chart data", :controller => 'tools', :action => 'bar' %> |
+    <%= link_to "Logout", :controller => 'admin', :action => 'logout' %>
+  </p>
+  <p>
+    Page loaded <%= Time.now.strftime('%c') %>
+  </p>
+</div>
+<% end %>
 </div>
 </body>
 </html>
