Line chart for continuously varying quantities.

--- a/app/views/admin/list.html.erb
+++ b/app/views/admin/list.html.erb
@@ -23,6 +23,7 @@
       <th>q10_1</th>
       <th>q10_9</th>
       <th>q10_10</th>
+      <th>ltrsppn</th>
     </tr>
   </thead>
   <tbody>
@@ -46,6 +47,7 @@
         <td><%= q.q10_1 %></td>
         <td><%= q.q10_9 %></td>
         <td><%= q.q10_10 %></td>
+        <td><%= q.ltrsppn %></td>
       </tr>
     <% end %>
   </tbody>
