--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,8 @@
     <%= link_to "Admin", :controller => 'admin', :action => 'index' %> |
     <%= link_to "List data", :controller => 'admin', :action => 'list' %> |
     <%= link_to "Import data", :controller => 'admin', :action => 'import' %> |
-    <%= link_to "Chart data", :controller => 'tools', :action => 'bar' %> |
+    <%= link_to "Chart categorical data", :controller => 'tools', :action => 'bar' %> |
+    <%= link_to "Chart numerical data", :controller => 'tools', :action => 'line' %> |
     <%= link_to "Logout", :controller => 'admin', :action => 'logout' %>
   </p>
   <p>
