--- a/app/views/tools/bar.html.erb
+++ b/app/views/tools/bar.html.erb
@@ -41,7 +41,8 @@
         var chart_options = {
           bar: { groupWidth: '75%' },
           isStacked: <%= @stack_bars %>,
-          series: [{color: '#A14F0C'}, {color: '#00A76D'}, {color: '#8E0042'}, {color: '#00734A'}]
+          series: [{color: '#A14F0C'}, {color: '#00A76D'}, {color: '#8E0042'}, {color: '#00734A'}],
+          hAxis: {title: '<%= @bar_meaning %>',  titleTextStyle: {color: 'gray'}}
         };
         var table_options = {
           width: 825
