Human-readable label for x-axis.

--- a/app/views/tools/bar.html.erb
+++ b/app/views/tools/bar.html.erb
@@ -42,7 +42,7 @@
           bar: { groupWidth: '75%' },
           isStacked: <%= @stack_bars %>,
           series: [{color: '#A14F0C'}, {color: '#00A76D'}, {color: '#8E0042'}, {color: '#00734A'}],
-          hAxis: {title: '<%= @bar_meaning %>',  titleTextStyle: {color: 'gray'}}
+          hAxis: {title: '<%= @bar_meaning_name %>',  titleTextStyle: {color: 'gray'}}
         };
         var table_options = {
           width: 825
