--- a/app/views/households/index.html.erb
+++ b/app/views/households/index.html.erb
@@ -3,6 +3,7 @@
   <%= @count %> households in the database.<br />
   <%= link_to 'List household data', :action => 'list' %><br />
   <%= link_to 'Import household data', :action => 'import' %><br />
+  <%= link_to 'Chart household data', :action => 'chart' %><br />
   <%= link_to 'Delete household data', :action => 'delete_all' %><br />
 </p>
 <p>
