--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       margin:0px auto;
       text-align:left;
       }
-    td {text-align: right;}
+    td, th {text-align: right;}
     select{width: 150px;}
     header{
       background-color: #00734A;
